syntax = "proto3";

package usercenter.api.usercenter.userinfo.v1;

option go_package = "./v1;v1";
option java_multiple_files = true;
option java_package = "usercenter.api.usercenter.userinfo.v1";
option java_outer_classname = "UserinfoV1";

import "validate/validate.proto";

message ListUserinfoRequest {
  uint32 page = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 pageSize = 2[(validate.rules).uint32 = {gt: 0,lte:50}];
  optional string order = 3[(validate.rules).string = {in: ["asc","desc"]}];
  optional string orderBy = 4[(validate.rules).string = {in: ["id","created_at","weight"]}];
  uint32 userId = 5;
}

message ListUserinfoReply {
  message Userinfo {
    uint32 id = 1;
    uint32 userId = 2;
    string keyword = 3;
    string value = 4;
    string name = 7;
    uint32 createdAt = 5;
    uint32 updatedAt = 6;
  }

  uint32 total = 1;
  repeated Userinfo list = 2;
}

message CreateUserinfoRequest {
  uint32 userId = 1[(validate.rules).uint32 = {gt: 0}];
  string keyword = 2[(validate.rules).string = {min_len: 1}];
  string value = 3[(validate.rules).string = {min_len: 1}];
}

message CreateUserinfoReply {
  uint32 id = 1;
}

message UpdateUserinfoRequest {
  uint32 id = 1[(validate.rules).uint32 = {gt: 0}];
  string keyword = 2[(validate.rules).string = {min_len: 1}];
  string value = 3[(validate.rules).string = {min_len: 1}];
}

message UpdateUserinfoReply {
}

message DeleteUserinfoRequest {
  repeated uint32 ids = 1[(validate.rules).repeated = {min_items: 1, unique:true, max_items:50}];
}

message DeleteUserinfoReply {
  uint32 total = 1;
}

